# yt

./: .env.example  .gitignore  .gitmodules  README.md  alita.txt  alita_questions.md  alita_questions_revised.md  pyproject.toml
.clinerules/: 00_role.md  01_python.md  02_project_context.md
common/: pyproject.toml
common/src/common/: __init__.py  ai_metadata.py  config.py  logger.py  types.py  url_utils.py
pdf/: README.md  pyproject.toml
pdf/src/pdf/: __init__.py  cli.py  converter.py  metadata.py
prompts/: question_tree.md
scrape/: README.md  pyproject.toml
scrape/src/scrape/: __init__.py  cli.py  metadata.py  scraper.py
summarize/: pyproject.toml
summarize/src/summarize/: __init__.py  cli.py  summarizer.py
transcript/: README.md  pyproject.toml
transcript/src/transcript/: __init__.py  cli.py  extractor.py  metadata.py
typings/googleapiclient/: _helpers.pyi  http.pyi
