[project]
name = "scrape"
version = "0.1.0"
description = "Web content extraction utilities using Firecrawl"
requires-python = ">=3.13"
dependencies = [
    "common",
    "firecrawl-py>=1.0.0",
    "click>=8.1.7",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "tenacity>=9.0.0",
    "validators>=0.22.0",
]

[tool.uv.sources]
common = { workspace = true }

[project.scripts]
scrape = "scrape.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
