[project]
name = "summarize"
version = "0.1.0"
description = "Content summarization utilities"
requires-python = ">=3.13"
dependencies = [
    "common",
    "transcript",
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "click>=8.1.7",
]

[tool.uv.sources]
common = { workspace = true }
transcript = { workspace = true }

[project.scripts]
summarize = "summarize.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
