[project]
name = "summarize"
version = "0.1.0"
description = "Content summarization utilities"
requires-python = ">=3.13"
dependencies = [
    "common",
    "transcript",
    "scrape",
    "pdf",
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "click>=8.1.7",
]

[tool.uv.sources]
common = { workspace = true }
transcript = { workspace = true }
scrape = { workspace = true }
pdf = { workspace = true }

[project.scripts]
summarize = "summarize.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
