[project]
name = "transcript"
version = "0.1.0"
description = "YouTube transcript extraction utilities"
requires-python = ">=3.13"
dependencies = [
    "common",
    "youtube-transcript-api>=0.6.2",
    "click>=8.1.7",
    "google-api-python-client>=2.0.0",
    "openai>=1.0.0",
    "tenacity>=9.0.0",
]

[tool.uv.sources]
common = { workspace = true }

[project.scripts]
yt-transcript = "transcript.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
