[project]
name = "transcript"
version = "0.1.0"
description = "YouTube transcript extraction utilities"
requires-python = ">=3.13"
dependencies = [
    "common",
    "yt-dlp>=2024.12.13",
    "click>=8.1.7",
    "tenacity>=9.0.0",
]

[tool.uv.sources]
common = { workspace = true }

[project.scripts]
yt-transcript = "transcript.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
